Fix spacing and grouping of posts

--- a/assets/css/combined.css
+++ b/assets/css/combined.css
@@ -911,7 +911,8 @@ body {
 }
 
 .post-summary {
-    margin-top: 1em;
+    display: block;
+    color: #333;
 }
 
 .pagination .button {
