--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -291,3 +291,7 @@ a.pdf {
         display: none;
     }
 }
+
+.posts li {
+    padding-bottom: 1em;
+}
